--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.7.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   }
 }
