--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/patriceandrea/yelpCamp#readme",
   "dependencies": {
+    "bootstrap": "^5.2.2",
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
