--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/patriceandrea/yelpCamp#readme",
   "dependencies": {
     "bootstrap": "^5.2.2",
+    "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
