--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "homepage": "https://github.com/patriceandrea/yelpCamp#readme",
   "dependencies": {
     "bootstrap": "^5.2.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "joi": "^17.7.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.7.0",
