--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/patriceandrea/yelpCamp#readme",
   "dependencies": {
     "bootstrap": "^5.2.2",
+    "cloudinary": "^1.32.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
@@ -32,6 +34,7 @@
     "mongoose": "^6.7.0",
     "morgan": "^1.10.0",
     "multer": "*",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
