--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/patriceandrea/yelpCamp#readme",
   "dependencies": {
     "bootstrap": "^5.2.2",
+    "bs-custom-file-input": "^1.3.4",
     "cloudinary": "^1.32.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
