--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/patriceandrea/yelpCamp#readme",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.14.0",
     "bootstrap": "^5.2.2",
     "bs-custom-file-input": "^1.3.4",
     "cloudinary": "^1.32.0",
