--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
+    "helmet": "^4.1.1",
     "joi": "^17.7.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.7.0",
